--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             "assets": [{
                 "glob": "**/*",
                 "input": "./node_modules/leaflet/dist/images",
-                "output": "leaflet/"
+                "output": "assets/"
               },
               "src/favicon.ico",
               "src/assets"
